{feat} - add user api
what : add user api
